# chatThroughThePipeForLinux

./: CMakeLists.txt  README.md  cmake_debug.txt
src/: main.cpp
src/network/: Chat.cpp  Chat.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  TCP.h
src/ui/: ChatUI.cpp  ChatUI.h
